working on wrapping issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,10 +117,6 @@
 				font-size: 12pt;
 			}
 			
-			h1 {
-			width: 100%;
-			}
-
 		}
 
 	body, input, select, textarea {
@@ -181,6 +177,10 @@
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
 			overflow: auto;
+		}
+		
+		h2.major {
+		    width: 100%;
 		}
 
 	h1 {
